2007-01-09   Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented a very memory efficient message fetching mechanism in
	camel-lite (it uses streams rather than copying things in memory)
	* Improved the partial message retrieval with this new method too

2007-01-08  Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented first pieces of the partial message retrieval
	* Further implemented TnyCamelPopFolder and TnyCamelPopAccount

2007-01-04  Philip Van Hoof <pvanhoof@gnome.org>

	* Created the TnyMsgReceiveStrategy infrastructure
	* Implemented TnyCamelFullMsgReceiveStrategy
	* Implemented dummy-copy of TnyCamelPartialMsgReceiveStrategy
	* Updated the documentation
	* Updated the Python bindings for this
	* Adjusted the camel-lite API to cope with upcoming partial message
	retrieval features

	* This was a major API change

2007-01-03  Philip Van Hoof <pvanhoof@gnome.org>

	* Porting to the one laptop per child project laptop
	* Created marketing demo video about tinymail on the OLPC, posted on 
	tinymail.org and youtube
	* Analysis of partial message retrieval
	* Created documentation item about partial message retrieval

2007-01-02  Philip Van Hoof <pvanhoof@gnome.org>

	* Created new documentation items
	* Created camel-lite internal documentation items

2007-01-02  Sergio Villar Senin <svillar@igalia.com>
	* Replaced an include that prevented the documentation from being
	built

2006-12-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Various fixes about creating and sending E-mails
	* Added a TnyCamelMemStream type
	* Added a msg-send test

2006-12-25  Philip Van Hoof <pvanhoof@gnome.org>

	* TnyPlatformFactory: Added new_msg, new_header and new_mime_part

	* This was a major API change

2006-12-21  Sergio Villar Senin <svillar@igalia.com>

	* docs/devel/reference/Makefile.am: added the path where to look
	for the includes of the tests

2006-12-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed a few reference counting problems too
